Bug 417548 - Night color KCM crashes when geolocation dataengine isn't available
Summary: Night color KCM crashes when geolocation dataengine isn't available
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.17.5
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
: 417557 417653 417671 417683 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-02-13 10:24 UTC by Jaak Ristioja
Modified: 2021-03-09 01:15 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jaak Ristioja 2020-02-13 10:24:19 UTC
Application: systemsettings5 (5.17.5)
 (Compiled from sources)
Qt Version: 5.14.1
Frameworks Version: 5.67.0
Operating System: Linux 5.5.3-gentoo x86_64
Distribution: "Gentoo Base System release 2.6"

-- Information about the crash:
- What I was doing when the application crashed:

Opened system settings, search for "effects", navigated to "Workspace Behavior", switched between pages using the left pane, hit "< All Settings" to go back, searched for "compositor", clicked on "Display And Monitor".

-- Backtrace:
Application: System Settings (systemsettings5), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f1650e517c0 (LWP 9186))]

Thread 5 (Thread 0x7f1634b64700 (LWP 9295)):
#0  0x00007f1656f9465c in ?? ()
#1  0x00007f1656f94798 in clock_gettime ()
#2  0x00007f165524eef7 in __GI___clock_gettime (clock_id=clock_id@entry=1, tp=tp@entry=0x7f1634b63b20) at ../sysdeps/unix/clock_gettime.c:115
#3  0x00007f165587f4b1 in qt_clock_gettime (ts=0x7f1634b63b20, clock=1) at kernel/qelapsedtimer_unix.cpp:175
#4  do_gettime (frac=<synthetic pointer>, sec=<synthetic pointer>) at kernel/qelapsedtimer_unix.cpp:166
#5  qt_gettime () at kernel/qelapsedtimer_unix.cpp:175
#6  0x00007f165587e039 in QTimerInfoList::updateCurrentTime (this=this@entry=0x7f162c003fb0) at kernel/qtimerinfo_unix.cpp:91
#7  0x00007f165587e415 in QTimerInfoList::timerWait (this=0x7f162c003fb0, tm=...) at kernel/qtimerinfo_unix.cpp:388
#8  0x00007f165587f894 in timerSourcePrepareHelper (src=<optimized out>, timeout=timeout@entry=0x7f1634b63bf4) at kernel/qeventdispatcher_glib.cpp:138
#9  0x00007f165587f93e in timerSourcePrepare (source=<optimized out>, timeout=timeout@entry=0x7f1634b63bf4) at kernel/qeventdispatcher_glib.cpp:166
#10 0x00007f165356f32e in g_main_context_prepare (context=context@entry=0x7f162c060080, priority=priority@entry=0x7f1634b63c80) at ../glib-2.60.7/glib/gmain.c:3499
#11 0x00007f165356fcd6 in g_main_context_iterate (context=context@entry=0x7f162c060080, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib-2.60.7/glib/gmain.c:3907
#12 0x00007f165356fecf in g_main_context_iteration (context=0x7f162c060080, may_block=may_block@entry=1) at ../glib-2.60.7/glib/gmain.c:3988
#13 0x00007f165587fb2b in QEventDispatcherGlib::processEvents (this=0x7f162c006da0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#14 0x00007f16558243db in QEventLoop::exec (this=this@entry=0x7f1634b63dc0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:136
#15 0x00007f1655662218 in QThread::exec (this=this@entry=0x55c3061bc450) at ../../include/QtCore/../../src/corelib/global/qflags.h:118
#16 0x00007f16547ba895 in QQmlThreadPrivate::run (this=0x55c3061bc450) at qml/ftw/qqmlthread.cpp:155
#17 0x00007f16556632ac in QThreadPrivate::start (arg=0x55c3061bc450) at thread/qthread_unix.cpp:342
#18 0x00007f1653ddf497 in start_thread (arg=<optimized out>) at pthread_create.c:486
#19 0x00007f165523f0df in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 4 (Thread 0x7f164ceae700 (LWP 9189)):
#0  futex_wait_cancelable (private=0, expected=0, futex_word=0x55c2fe67f028) at ../sysdeps/unix/sysv/linux/futex-internal.h:88
#1  __pthread_cond_wait_common (abstime=0x0, mutex=0x55c2fe67efd8, cond=0x55c2fe67f000) at pthread_cond_wait.c:502
#2  __pthread_cond_wait (cond=0x55c2fe67f000, mutex=0x55c2fe67efd8) at pthread_cond_wait.c:655
#3  0x00007f164d5175cb in cnd_wait (mtx=0x55c2fe67efd8, cond=0x55c2fe67f000) at ../mesa-19.2.8/include/c11/threads_posix.h:155
#4  util_queue_thread_func (input=input@entry=0x55c2fe558bb0) at ../mesa-19.2.8/src/util/u_queue.c:272
#5  0x00007f164d5171e7 in impl_thrd_routine (p=<optimized out>) at ../mesa-19.2.8/include/c11/threads_posix.h:87
#6  0x00007f1653ddf497 in start_thread (arg=<optimized out>) at pthread_create.c:486
#7  0x00007f165523f0df in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 3 (Thread 0x7f164f377700 (LWP 9188)):
#0  0x00007f1653540837 in g_ptr_array_set_size (array=0x55c2fe20da80, length=length@entry=0) at ../glib-2.60.7/glib/garray.c:1205
#1  0x00007f165356f21a in g_main_context_prepare (context=context@entry=0x7f1640000c20, priority=priority@entry=0x7f164f376c60) at ../glib-2.60.7/glib/gmain.c:3470
#2  0x00007f165356fcd6 in g_main_context_iterate (context=context@entry=0x7f1640000c20, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib-2.60.7/glib/gmain.c:3907
#3  0x00007f165356fecf in g_main_context_iteration (context=0x7f1640000c20, may_block=may_block@entry=1) at ../glib-2.60.7/glib/gmain.c:3988
#4  0x00007f165587fb2b in QEventDispatcherGlib::processEvents (this=0x7f1640000b60, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#5  0x00007f16558243db in QEventLoop::exec (this=this@entry=0x7f164f376da0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:136
#6  0x00007f1655662218 in QThread::exec (this=this@entry=0x7f1655bcf060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at ../../include/QtCore/../../src/corelib/global/qflags.h:118
#7  0x00007f1655b3bc28 in QDBusConnectionManager::run (this=0x7f1655bcf060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:179
#8  0x00007f16556632ac in QThreadPrivate::start (arg=0x7f1655bcf060 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:342
#9  0x00007f1653ddf497 in start_thread (arg=<optimized out>) at pthread_create.c:486
#10 0x00007f165523f0df in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 2 (Thread 0x7f16504aa700 (LWP 9187)):
#0  0x00007f1655233083 in __GI___poll (fds=fds@entry=0x7f16504a9ce8, nfds=nfds@entry=1, timeout=timeout@entry=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
#1  0x00007f1653d9ccf2 in poll (__timeout=-1, __nfds=1, __fds=0x7f16504a9ce8) at /usr/include/bits/poll2.h:46
#2  _xcb_conn_wait (c=c@entry=0x55c2fe1a8800, cond=cond@entry=0x55c2fe1a8840, vector=vector@entry=0x0, count=count@entry=0x0) at /var/tmp/portage/x11-libs/libxcb-1.13.1/work/libxcb-1.13.1/src/xcb_conn.c:479
#3  0x00007f1653d9e8ea in xcb_wait_for_event (c=c@entry=0x55c2fe1a8800) at /var/tmp/portage/x11-libs/libxcb-1.13.1/work/libxcb-1.13.1/src/xcb_in.c:697
#4  0x00007f16506327b0 in QXcbEventQueue::run (this=0x55c2fe19c9f0) at qxcbeventqueue.cpp:228
#5  0x00007f16556632ac in QThreadPrivate::start (arg=0x55c2fe19c9f0) at thread/qthread_unix.cpp:342
#6  0x00007f1653ddf497 in start_thread (arg=<optimized out>) at pthread_create.c:486
#7  0x00007f165523f0df in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95

Thread 1 (Thread 0x7f1650e517c0 (LWP 9186)):
[KCrash Handler]
#7  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#8  0x00007f165515a539 in __GI_abort () at abort.c:79
#9  0x00007f1655610871 in qt_message_fatal (context=..., message=<synthetic pointer>...) at global/qlogging.cpp:1894
#10 QMessageLogger::fatal (this=this@entry=0x7ffe31734ec0, msg=msg@entry=0x7f1656b0c220 "Accessed invalid KPluginInfo object") at global/qlogging.cpp:893
#11 0x00007f1656a910c9 in KPluginInfo::setPluginEnabled (enabled=<optimized out>, this=<optimized out>) at /usr/include/qt5/QtCore/qlogging.h:90
#12 0x00007f1656a912af in KPluginInfo::toMetaData (this=<optimized out>) at /usr/include/qt5/QtCore/qlogging.h:90
#13 0x00007f163d65feca in Plasma::DataEngine::DataEngine (this=0x55c30181bf80, plugin=..., parent=0x0) at /var/tmp/portage/kde-frameworks/plasma-5.67.0/work/plasma-framework-5.67.0/src/plasma/dataengine.cpp:51
#14 0x00007f163d674dc9 in Plasma::NullEngine::NullEngine (parent=0x0, this=0x55c30181bf80) at /var/tmp/portage/kde-frameworks/plasma-5.67.0/work/plasma-framework-5.67.0/src/plasma/private/dataenginemanager.cpp:42
#15 Plasma::DataEngineManagerPrivate::nullEngine (this=0x55c301becd50) at /var/tmp/portage/kde-frameworks/plasma-5.67.0/work/plasma-framework-5.67.0/src/plasma/private/dataenginemanager.cpp:71
#16 Plasma::DataEngineManager::loadEngine (this=<optimized out>, name=...) at /var/tmp/portage/kde-frameworks/plasma-5.67.0/work/plasma-framework-5.67.0/src/plasma/private/dataenginemanager.cpp:136
#17 0x00007f163d66427d in Plasma::DataEngineConsumer::dataEngine (this=this@entry=0x55c2febb1fc0, name=...) at /var/tmp/portage/kde-frameworks/plasma-5.67.0/work/plasma-framework-5.67.0/src/plasma/dataengineconsumer.cpp:99
#18 0x00007f163f57feb1 in ColorCorrect::Geolocator::Geolocator (this=0x55c2febb1fb0, parent=<optimized out>) at /var/tmp/portage/kde-plasma/plasma-workspace-5.17.5-r1/work/plasma-workspace-5.17.5/libcolorcorrect/geolocator.cpp:26
#19 0x00007f163f58c70b in QQmlPrivate::QQmlElement<ColorCorrect::Geolocator>::QQmlElement (this=0x55c2febb1fb0) at /usr/include/qt5/QtQml/qqmlprivate.h:106
#20 QQmlPrivate::createInto<ColorCorrect::Geolocator> (memory=0x55c2febb1fb0) at /usr/include/qt5/QtQml/qqmlprivate.h:127
#21 0x00007f1654731a9a in QQmlType::create (this=this@entry=0x7ffe31735128, out=out@entry=0x7ffe31735120, memory=memory@entry=0x7ffe31735130, additionalMemory=additionalMemory@entry=144) at qml/qqmltype.cpp:485
#22 0x00007f165478f043 in QQmlObjectCreator::createInstance (this=0x55c30608a9f0, index=2, parent=0x55c306046dd0, isContextObject=<optimized out>) at qml/qqmlobjectcreator.cpp:1203
#23 0x00007f165478d85a in QQmlObjectCreator::setPropertyBinding (this=0x55c30608a9f0, bindingProperty=0x7f162c07d118, binding=0x7f163e311ce0) at qml/qqmlobjectcreator.cpp:861
#24 0x00007f165478e1d9 in QQmlObjectCreator::setupBindings (this=0x55c30608a9f0, applyDeferredBindings=<optimized out>) at qml/qqmlobjectcreator.cpp:812
#25 0x00007f165478ecfd in QQmlObjectCreator::populateInstance (this=0x55c30608a9f0, index=-1, instance=0x0, bindingTarget=0x0, valueTypeProperty=0x0) at qml/qqmlobjectcreator.cpp:1511
#26 0x00007f165478f5fd in QQmlObjectCreator::createInstance (this=<optimized out>, index=0, parent=<optimized out>, isContextObject=<optimized out>) at qml/qqmlobjectcreator.cpp:1344
#27 0x00007f16547904b1 in QQmlObjectCreator::create (this=0x55c30608a9f0, subComponentIndex=<optimized out>, parent=parent@entry=0x0, interrupt=interrupt@entry=0x7ffe31735910) at qml/qqmlobjectcreator.cpp:205
#28 0x00007f165471239e in QQmlIncubatorPrivate::incubate (this=0x55c305af8390, i=...) at qml/qqmlincubator.cpp:296
#29 0x00007f1654712af2 in QQmlEnginePrivate::incubate (this=this@entry=0x7f1638168680, i=..., forContext=forContext@entry=0x55c305d88100) at qml/qqmlincubator.cpp:88
#30 0x00007f165470ed1d in QQmlComponent::create (this=<optimized out>, incubator=..., context=<optimized out>, forContext=forContext@entry=0x0) at qml/qqmlcomponent.cpp:1104
#31 0x00007f1654f204e7 in KDeclarative::QmlObject::completeInitialization (initialProperties=..., this=0x55c305cddf60) at /var/tmp/portage/kde-frameworks/kdeclarative-5.67.0/work/kdeclarative-5.67.0/src/kdeclarative/qmlobject.cpp:321
#32 KDeclarative::QmlObject::completeInitialization (this=0x55c305cddf60, initialProperties=...) at /var/tmp/portage/kde-frameworks/kdeclarative-5.67.0/work/kdeclarative-5.67.0/src/kdeclarative/qmlobject.cpp:302
#33 0x00007f1656dcea1e in KQuickAddons::ConfigModule::mainUi (this=0x55c305cde080) at /usr/include/qt5/QtCore/qhash.h:241
#34 0x00007f1656ee8d9f in KCModuleLoader::loadModule (mod=..., report=report@entry=KCModuleLoader::Inline, parent=0x55c305cde2f0, args=...) at /var/tmp/portage/kde-frameworks/kcmutils-5.67.0/work/kcmutils-5.67.0/src/kcmoduleloader.cpp:104
#35 0x00007f1656ef2b4d in KCModuleProxyPrivate::loadModule (this=this@entry=0x55c305b991c0) at /var/tmp/portage/kde-frameworks/kcmutils-5.67.0/work/kcmutils-5.67.0/src/kcmoduleproxy.cpp:94
#36 0x00007f1656ef3168 in KCModuleProxy::realModule (this=this@entry=0x55c305cde2f0) at /var/tmp/portage/kde-frameworks/kcmutils-5.67.0/work/kcmutils-5.67.0/src/kcmoduleproxy.cpp:67
#37 0x00007f1656f34da5 in ModuleView::updatePageIconHeader (this=this@entry=0x55c2fe402ac0, page=page@entry=0x55c305b33470, light=light@entry=true) at /var/tmp/portage/kde-plasma/systemsettings-5.17.5/work/systemsettings-5.17.5/core/ModuleView.cpp:219
#38 0x00007f1656f36050 in ModuleView::addModule (this=this@entry=0x55c2fe402ac0, module=<optimized out>) at /var/tmp/portage/kde-plasma/systemsettings-5.17.5/work/systemsettings-5.17.5/core/ModuleView.cpp:196
#39 0x00007f1656f36445 in ModuleView::loadModule (this=0x55c2fe402ac0, menuItem=...) at /var/tmp/portage/kde-plasma/systemsettings-5.17.5/work/systemsettings-5.17.5/core/ModuleView.cpp:151
#40 0x00007f165585c8d5 in QtPrivate::QSlotObjectBase::call (a=0x7ffe31735f80, r=0x55c2fe3cdf60, this=0x55c2fe5d3ec0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:394
#41 doActivate<false> (sender=0x55c2fe570c90, signal_index=10, argv=0x7ffe31735f80) at kernel/qobject.cpp:3870
#42 0x00007f16558567da in QMetaObject::activate (sender=sender@entry=0x55c2fe570c90, m=m@entry=0x7f16568845a0 <QAbstractItemView::staticMetaObject>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffe31735f80) at kernel/qobject.cpp:3930
#43 0x00007f16565cabe5 in QAbstractItemView::activated (this=this@entry=0x55c2fe570c90, _t1=...) at .moc/moc_qabstractitemview.cpp:672
#44 0x00007f16565d9104 in QAbstractItemView::mouseDoubleClickEvent (this=0x55c2fe570c90, event=0x7ffe31736760) at itemviews/qabstractitemview.cpp:1968
#45 0x00007f16563aaa3c in QWidget::event (this=this@entry=0x55c2fe570c90, event=event@entry=0x7ffe31736760) at kernel/qwidget.cpp:8661
#46 0x00007f16564583ae in QFrame::event (this=0x55c2fe570c90, e=0x7ffe31736760) at widgets/qframe.cpp:550
#47 0x00007f16565d8abe in QAbstractItemView::viewportEvent (this=0x55c2fe570c90, event=0x7ffe31736760) at itemviews/qabstractitemview.cpp:1754
#48 0x00007f1655825886 in QCoreApplicationPrivate::sendThroughObjectEventFilters (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.cpp:1218
#49 QCoreApplicationPrivate::sendThroughObjectEventFilters (receiver=receiver@entry=0x55c2fe570f00, event=event@entry=0x7ffe31736760) at kernel/qcoreapplication.cpp:1207
#50 0x00007f1656367c5e in QApplicationPrivate::notify_helper (this=this@entry=0x55c2fe198850, receiver=receiver@entry=0x55c2fe570f00, e=e@entry=0x7ffe31736760) at kernel/qapplication.cpp:3678
#51 0x00007f165637104b in QApplication::notify (this=<optimized out>, receiver=0x55c2fe570f00, e=0x7ffe31736760) at kernel/qapplication.cpp:3128
#52 0x00007f1655825a4f in QCoreApplication::notifyInternal2 (receiver=0x55c2fe570f00, event=0x7ffe31736760) at kernel/qcoreapplication.cpp:1092
#53 0x00007f16563700b8 in QApplicationPrivate::sendMouseEvent (receiver=receiver@entry=0x55c2fe570f00, event=event@entry=0x7ffe31736760, alienWidget=alienWidget@entry=0x55c2fe570f00, nativeWidget=0x55c2fe201640, buttonDown=buttonDown@entry=0x7f1656895300 <qt_button_down>, lastMouseReceiver=..., spontaneous=true, onlyDispatchEnterLeave=false) at kernel/qapplication.cpp:2614
#54 0x00007f16563c53e1 in QWidgetWindow::handleMouseEvent (this=0x55c2fe30f940, event=0x7ffe31736c40) at /usr/lib/gcc/x86_64-pc-linux-gnu/9.2.0/include/g++-v9/bits/atomic_base.h:413
#55 0x00007f16563c8384 in QWidgetWindow::event (event=0x7ffe31736c40, this=0x55c2fe30f940) at kernel/qwidgetwindow.cpp:295
#56 QWidgetWindow::event (this=0x55c2fe30f940, event=0x7ffe31736c40) at kernel/qwidgetwindow.cpp:238
#57 0x00007f1656367c6f in QApplicationPrivate::notify_helper (this=this@entry=0x55c2fe198850, receiver=receiver@entry=0x55c2fe30f940, e=e@entry=0x7ffe31736c40) at kernel/qapplication.cpp:3684
#58 0x00007f1656370df0 in QApplication::notify (this=0x7ffe31737050, receiver=0x55c2fe30f940, e=0x7ffe31736c40) at kernel/qapplication.cpp:3430
#59 0x00007f1655825a4f in QCoreApplication::notifyInternal2 (receiver=0x55c2fe30f940, event=0x7ffe31736c40) at kernel/qcoreapplication.cpp:1092
#60 0x00007f1655d19dff in QGuiApplicationPrivate::processMouseEvent (e=0x55c30594a070) at kernel/qguiapplication.cpp:2253
#61 0x00007f1655d1b525 in QGuiApplicationPrivate::processWindowSystemEvent (e=e@entry=0x55c30594a070) at kernel/qguiapplication.cpp:1941
#62 0x00007f1655cf4cca in QWindowSystemInterface::sendWindowSystemEvents (flags=flags@entry=...) at kernel/qwindowsysteminterface.cpp:1163
#63 0x00007f1650633bfa in xcbSourceDispatch (source=<optimized out>) at qxcbeventdispatcher.cpp:105
#64 0x00007f165356fbb2 in g_main_dispatch (context=0x7f1648005000) at ../glib-2.60.7/glib/gmain.c:3189
#65 g_main_context_dispatch (context=context@entry=0x7f1648005000) at ../glib-2.60.7/glib/gmain.c:3854
#66 0x00007f165356fe40 in g_main_context_iterate (context=context@entry=0x7f1648005000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib-2.60.7/glib/gmain.c:3927
#67 0x00007f165356fecf in g_main_context_iteration (context=0x7f1648005000, may_block=may_block@entry=1) at ../glib-2.60.7/glib/gmain.c:3988
#68 0x00007f165587fb0d in QEventDispatcherGlib::processEvents (this=0x55c2fe20b450, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#69 0x00007f16558243db in QEventLoop::exec (this=this@entry=0x7ffe31736f70, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:136
#70 0x00007f165582cd32 in QCoreApplication::exec () at ../../include/QtCore/../../src/corelib/global/qflags.h:118
#71 0x000055c2fc83f649 in main (argc=<optimized out>, argv=<optimized out>) at /var/tmp/portage/kde-plasma/systemsettings-5.17.5/work/systemsettings-5.17.5/app/main.cpp:71
[Inferior 1 (process 9186) detached]

Possible duplicates by query: bug 417410, bug 416969, bug 415674, bug 414938, bug 414922.

Reported using DrKonqi
Comment 1 Kai Uwe Broulik 2020-02-13 12:28:34 UTC
*** Bug 417557 has been marked as a duplicate of this bug. ***
Comment 2 Kai Uwe Broulik 2020-02-13 12:33:31 UTC
Possible patch https://phabricator.kde.org/D27366
Comment 3 Kai Uwe Broulik 2020-02-13 14:22:04 UTC
Git commit 1dc36bc2cee489e621a52fb4456ff28cf6a64685 by Kai Uwe Broulik.
Committed on 13/02/2020 at 14:21.
Pushed by broulik into branch 'master'.

Construct NullEngine with KPluginMetaData()

The deprecated constructor taking a KPluginInfo unconditionally calls toMetaData() and then asserts.

Differential Revision: https://phabricator.kde.org/D27366

M  +1    -1    src/plasma/private/dataenginemanager.cpp

https://commits.kde.org/plasma-framework/1dc36bc2cee489e621a52fb4456ff28cf6a64685
Comment 4 daan.j.demeyer@gmail.com 2020-02-14 21:42:44 UTC
*** Bug 417653 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2020-02-16 21:05:37 UTC
*** Bug 417683 has been marked as a duplicate of this bug. ***
Comment 6 Nate Graham 2021-03-09 01:15:59 UTC
*** Bug 417671 has been marked as a duplicate of this bug. ***